# computation

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
build26/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  get_all_sources_and_headers.sh
build26/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: compiler.cmake
example/: CMakeLists.txt  cfg_example.cpp
fuzz_test/: CMakeLists.txt  helper.cpp  helper.hpp  regex_fuzzing.cpp  regex_test.cpp
fuzz_test/contex_free_lang/: canonical_lr_grammar_fuzzing.cpp  lalr_grammar_fuzzing.cpp  ll_grammar_fuzzing.cpp  slr_grammar_fuzzing.cpp
fuzz_test/context_free_lang/: canonical_lr_grammar_fuzzing.cpp  cfg_parsing_fuzzing.cpp  cfg_transformation1_fuzzing.cpp  cfg_transformation2_fuzzing.cpp  cfg_transformation3_fuzzing.cpp  cnf_fuzzing.cpp  lalr_grammar_fuzzing.cpp  ll_grammar_fuzzing.cpp  slr_grammar_fuzzing.cpp
fuzz_test/regular_lang/: gnfa_fuzzing.cpp  nfa_fuzzing.cpp  regex_fuzzing.cpp
src/: ascii.hpp  automata.cpp  automata.hpp  automaton.cpp  automaton.hpp  canonical_lr_grammar.cpp  canonical_lr_grammar.hpp  cfg.cpp  cfg.hpp  common_tokens.hpp  dfa.cpp  dynamic_bitset.hpp  exception.hpp  grammar.cpp  grammar.hpp  hash.hpp  hash_combine.hpp  lang.cpp  lang.hpp  lexical_analyzer.cpp  lexical_analyzer.hpp  ll_grammar.cpp  ll_grammar.hpp  ll_parse.cpp  lr_grammar.cpp  lr_grammar.hpp  lr_item.cpp  lr_item.hpp  nfa.cpp  range_alphabet.hpp  regex.cpp  regex.hpp  regex_parse.cpp  regex_syntax_node.cpp  set_alphabet.hpp  slr_grammar.cpp  slr_grammar.hpp  string.hpp  symbol.hpp  util.hpp
src/alphabet/: alphabet.cpp  alphabet.hpp  alphabet_with_blank_symbol.hpp  common_tokens.cpp  endmarked_alphabet.hpp  map_alphabet.hpp  number_set_alphabet.hpp  range_alphabet.hpp  set_alphabet.hpp  symbol.hpp  union_alphabet.hpp
src/automata/: automata.cpp  automata.hpp
src/automaton/: automaton.cpp  automaton.hpp
src/contex_free_lang/: .cfg.cpp.swp  .cfg_production.cpp.swp  canonical_lr_grammar.cpp  canonical_lr_grammar.hpp  cfg.cpp  cfg.hpp  cfg_production.cpp  cfg_production.hpp  cnf.cpp  lalr_grammar.cpp  lalr_grammar.hpp  ll_grammar.cpp  ll_grammar.hpp  lr_grammar.cpp  lr_grammar.hpp  lr_item.cpp  lr_item.hpp  model_transform.cpp  model_transform.hpp  pda.cpp  pda.hpp  slr_grammar.cpp  slr_grammar.hpp
src/context_free_lang/: canonical_lr_grammar.cpp  canonical_lr_grammar.hpp  cfg.cpp  cfg.hpp  cfg_pda.cpp  cfg_production.cpp  cfg_production.hpp  cfg_recursive_descent_parse.cpp  cnf.cpp  cnf.hpp  cnf_transform.cpp  common_grammar.cpp  common_grammar.hpp  dcfg.cpp  dcfg.hpp  dk.cpp  dk.hpp  dk_1.cpp  dk_1.hpp  dk_base.cpp  dk_base.hpp  dk_test.cpp  dpda.cpp  dpda.hpp  endmarked_dpda.cpp  endmarked_dpda.hpp  endmarkered_dpda.cpp  endmarkered_dpda.hpp  lalr_grammar.cpp  lalr_grammar.hpp  ll_grammar.cpp  ll_grammar.hpp  lr_0_grammar.cpp  lr_0_grammar.hpp  lr_0_item.cpp  lr_0_item.hpp  lr_1_grammar.cpp  lr_1_grammar.hpp  lr_1_item.cpp  lr_1_item.hpp  (+11 more)
src/formal_grammar/: grammar.hpp  grammar_symbol.hpp
src/lang/: .alphabet.cpp.swp  alphabet.cpp  alphabet.hpp  alphabet_with_blank_symbol.hpp  ascii.hpp  common_tokens.cpp  common_tokens.hpp  endmarked_alphabet.hpp  endmarkered_alphabet.hpp  extended_alphabet.hpp  lang.cpp  lang.hpp  map_alphabet.hpp  range_alphabet.hpp  set_alphabet.hpp  sub_alphabet.hpp  symbol.hpp  union_alphabet.hpp
src/regular_lang/: automaton.hpp  dfa.cpp  dfa.hpp  gnfa.cpp  gnfa.hpp  nfa.cpp  nfa.hpp  regex.cpp  regex.hpp  regex_parse.cpp  regex_syntax_node.cpp
src/turing/: turing_machine.cpp  turing_machine.hpp
src/turing_recognizable_lan/: turing_machine.hpp
src/turing_recognizable_lang/: multi_tape_turing_machine.hpp  multi_tape_turing_machine_base.hpp  ntm.cpp  ntm.hpp  single_tape_turing_machine.hpp  turing_machine.cpp  turing_machine.hpp  turing_machine_base.cpp  turing_machine_base.hpp
test/: CMakeLists.txt  automaton_test.cpp  canonical_lr_grammar_test.cpp  cfg_test.cpp  cnf_test.cpp  ll_grammar_test.cpp  parse_test.cpp  regex_test.cpp  slr_grammar_test.cpp  string_test.cpp
test/contex_free_lang/: canonical_lr_grammar_test.cpp  cfg_test.cpp  cnf_test.cpp  lalr_grammar_test.cpp  ll_grammar_test.cpp  slr_grammar_test.cpp
test/context_free_lang/: canonical_lr_grammar_test.cpp  cfg_test.cpp  cnf_test.cpp  dcfg_test.cpp  dk_1_test.cpp  dk_test.cpp  dpda_test.cpp  endmarked_dpda_test.cpp  lalr_grammar_test.cpp  ll_grammar_test.cpp  pda_test.cpp  slr_grammar_test.cpp
test/regular_lang/: dfa_test.cpp  gnfa_test.cpp  nfa_test.cpp  regex_test.cpp
test/turing_recognizable_lang/: turing_machine_test.cpp
